--- a/Developpement/design/style.css
+++ b/Developpement/design/style.css
@@ -16,14 +16,18 @@ a
 }
 .header
 {
+	position: fixed;
+	top: 0px;
+	left: 0px;
 	background-color: #85c630;
 	width: 100%;
+	box-shadow: 5px 5px 15px #333333; 
 }
 .header_info
 {
 	font-size: 12px;
 	color: white;
-	height: 100px;
+	height: 75px;
 	width: 600px;
 	text-align: right;
 }
@@ -32,11 +36,25 @@ a
 	font-size: 26px;
 	font-family: 'coolvetica_rg';
 }
-
+.header_menu a
+{
+	color: white;
+	-webkit-transition: all 0.1s ease-in;
+	-moz-transition: all 0.1s ease-in;
+	transition: all 0.1s ease-in;
+}
+.header_menu a:hover
+{
+	color: #fffd55;
+	font-size: 28px;
+	text-shadow: 1px 0px 10px black;
+}
 
 .news_sort
 {
-	float: right;
+	position: fixed;
+	top: 75px;
+	right: 0px;
 	background-color: #85c630;
 	color: white;
 	font-size: 18px;
@@ -44,13 +62,13 @@ a
 	text-align: center;
 	width: 600px;
 	height: 30px;
+	box-shadow: 5px 5px 15px #333333; 
 }
 .post_news
 {
 	height: 50%;
 	width: 85%;
 	margin: auto;
-
 }
 .title_post
 {
@@ -58,7 +76,7 @@ a
 	width: 100%;
 	color: white;
 	font-family: 'coolvetica_rg';
-	font-size: 28px;
+	font-size: 22px;
 }
 .rate
 {
@@ -66,7 +84,7 @@ a
 	width: 60px;
 	color: white;
 	font-family: 'coolvetica_rg';
-	font-size: 28px;
+	font-size: 22px;
 }
 .description
 {
@@ -75,13 +93,14 @@ a
 	border-style:solid;
 	background-color: white;
 	font-size: 14px;
+	box-shadow: 5px 5px 15px #333333; 
 }
 .date_news
 {
 	background-color: #85c630;
 	color: white;
 	font-size: 10px;
-	height: 100%;
+	height: 100%; 
 }
 .rss_block
 {
@@ -95,6 +114,8 @@ a
 	font-family: 'coolvetica_rg';
 	font-size: 24px;
 	width: 120px;
+	-moz-box-shadow:0 0 15px black;
+	-webkit-box-shadow:0 0 15px black;
 }
 .block_content
 {
@@ -103,6 +124,7 @@ a
 	border-width:6;
 	border-style:solid;
 	background-color: white;
+	box-shadow: 5px 5px 15px #333333; 
 }
 .pulse_button
 {
@@ -111,7 +133,7 @@ a
 	background-color: #85c630;
 	font-family: 'coolvetica_rg';
 	width: 35px;
-	font-size: 14px;
+	font-size: 14px; 
 }
 .block_title_right
 {
@@ -128,6 +150,7 @@ a
 	border-width:6;
 	border-style:solid;
 	background-color: white;
+	box-shadow: 5px 5px 15px #333333; 
 }
 .pulse_button_right
 {
@@ -148,6 +171,7 @@ a
 	width: 100px;
 	margin-top: -5px;
 	font-size: 18px;
+	box-shadow: 5px 5px 15px #333333; 
 }
 .rate_button:hover
 {
@@ -164,6 +188,7 @@ a
 	width: 100px;
 	margin-top: -5px;
 	font-size: 16px;
+	box-shadow: 5px 5px 15px #333333; 
 }
 .comment_button:hover
 {
