--- a/Developpement/design/style.css
+++ b/Developpement/design/style.css
@@ -1,4 +1,4 @@
-/* Par Michel GILLE le 11/04/12 */
+﻿/* Par Michel GILLE le 11/04/12 */
 @font-face 
 {
 	font-family: 'coolvetica_rg';
@@ -21,7 +21,7 @@ a
 	left: 0px;
 	background-color: #85c630;
 	width: 100%;
-	box-shadow: 5px 5px 15px #333333; 
+	box-shadow: 10px 10px 8px #417324; 
 }
 .header_info
 {
@@ -60,7 +60,7 @@ a
 	text-align: center;
 	width: 600px;
 	height: 30px;
-	box-shadow: 5px 5px 15px #333333; 
+	box-shadow: 10px 10px 8px #417324; 
 }
 .post_news
 {
@@ -83,7 +83,7 @@ a
 	color: white;
 	font-family: 'coolvetica_rg';
 	font-size: 22px;
-	box-shadow: 5px 5px 15px #333333; 
+	box-shadow: 5px 5px 3px #417324; 
 }
 .description
 {
@@ -92,7 +92,7 @@ a
 	border-style:solid;
 	background-color: white;
 	font-size: 14px;
-	box-shadow: 5px 5px 15px #333333; 
+	box-shadow: 5px 5px 3px #417324; 
 }
 .date_news
 {
@@ -100,7 +100,7 @@ a
 	color: white;
 	font-size: 10px;
 	height: 100%; 
-	box-shadow: 5px 5px 15px #333333; 
+	box-shadow: 5px 5px 3px #417324; 
 }
 .rss_block
 {
@@ -116,7 +116,7 @@ a
 	font-family: 'coolvetica_rg';
 	font-size: 24px;
 	width: 120px;
-	box-shadow: 5px 5px 15px #333333; 
+	box-shadow: 5px 5px 3px #417324; 
 }
 .block_content
 {
@@ -125,7 +125,7 @@ a
 	border-width:6;
 	border-style:solid;
 	background-color: white;
-	box-shadow: 5px 5px 15px #333333; 
+	box-shadow: 5px 5px 3px #417324; 
 }
 .pulse_button
 {
@@ -148,10 +148,10 @@ a
 {
 	font-size: 14px;
 	border-color:#85c630;
-	border-width:6;
+	border-width:6px;
 	border-style:solid;
 	background-color: white;
-	box-shadow: 5px 5px 15px #333333; 
+	box-shadow: 5px 5px 3px #417324; 
 }
 .pulse_button_right
 {
@@ -172,7 +172,7 @@ a
 	width: 100px;
 	margin-top: -5px;
 	font-size: 18px;
-	box-shadow: 5px 5px 15px #333333; 
+	box-shadow: 5px 5px 3px #417324; 
 }
 .rate_button:hover
 {
@@ -189,7 +189,7 @@ a
 	width: 100px;
 	margin-top: -5px;
 	font-size: 16px;
-	box-shadow: 5px 5px 15px #333333; 
+	box-shadow: 5px 5px 3px #417324; 
 }
 .comment_button:hover
 {
@@ -216,7 +216,7 @@ a
 	border-style:solid;
 	height: 200px;
 	width: 900px;
-	box-shadow: 10px 10px 15px #333333; 
+	box-shadow: 5px 5px 3px #417324; 
 }
 .profile_ban img
 {
@@ -230,7 +230,7 @@ a
 	font-family: 'coolvetica_rg';
 	font-size: 24px;
 	margin-top: -14px;
-	box-shadow: 5px 5px 15px #333333; 
+	box-shadow: 5px 5px 3px #417324; 
 }
 .profile_button_right
 {
@@ -239,7 +239,7 @@ a
 	font-family: 'coolvetica_rg';
 	font-size: 24px;
 	margin-top: -14px;
-	box-shadow: 5px 5px 15px #333333; 
+	box-shadow: 5px 5px 3px #417324; 
 }
 .profile_name
 {
@@ -249,7 +249,7 @@ a
 	font-family: 'coolvetica_rg';
 	font-size: 28px;
 	margin-top: -10px;
-	box-shadow: 5px 5px 15px #333333; 
+	box-shadow: 5px 5px 3px #417324; 
 }
 	
 
@@ -260,7 +260,7 @@ a
 	font-family: 'coolvetica_rg';
 	font-size: 24px;
 	width: 200px;
-	box-shadow: 5px 5px 15px #333333; 
+	box-shadow: 5px 5px 3px #417324; 
 }
 .about_block
 {
@@ -269,6 +269,15 @@ a
 	height: 400px;
 	vertical-align: top; 
 }
+.about_block img
+{
+	border-color:#85c630;
+	border-width: 8px;
+	border-style:solid;
+	height: 100px;
+	box-shadow: 5px 5px 3px #417324; 
+}
+
 .profile_block
 {
 	float: right;
@@ -293,7 +302,7 @@ a
 	border-style:solid;
 	background-color: white;
 	font-size: 16px;
-	box-shadow: 5px 5px 15px #333333;
+	box-shadow: 5px 5px 3px #417324;
 	vertical-align: top;
 }
 .article_content img
@@ -301,5 +310,9 @@ a
 	display: block;
 	margin: auto;
 	height: 200px;
+	border-color:#85c630;
+	border-width: 8px;
+	border-style:solid;
+	box-shadow: 3px 3px 2px #417324; 
 	
 }
