--- a/Developpement/design/style.css
+++ b/Developpement/design/style.css
@@ -316,3 +316,86 @@ a
 	box-shadow: 3px 3px 2px #417324; 
 	
 }
+
+.create_article
+{
+	width: 50%;
+	margin: auto;
+	background-color: #85c630;
+	box-shadow: 5px 5px 3px #417324;
+}
+
+.title_create_article
+{
+	color: white;
+	font-family: 'coolvetica_rg';
+	font-size: 26px;
+	vertical-align: top; 
+}
+
+.title_create_article input[type=text]
+{
+	background-color: #a5d85f;
+	border:0px;
+	font-family: 'coolvetica_rg';
+	font-size: 22px;
+	vertical-align: top; 
+}
+
+.title_create_article input[type=text]:focus
+{
+	border-color:#093c75;
+	-moz-box-shadow:0 0 3px #85c630;
+	-webkit-box-shadow:0 0 3px #85c630;
+	outline:none; /* Pour enlever le contour jaune lorsque l'on sélectionne un input dans Chrome */
+}
+select{
+	border: 0px;
+	font-size: 22px;
+	font-family: 'coolvetica_rg';
+	background-color: #a5d85f;
+	cursor:pointer;
+	padding:3px;
+	-moz-box-shadow:0 0 3px #aaa;
+	-webkit-box-shadow:0 0 3px #aaa;
+}
+select:active,
+select:focus{
+	border: 5px solid #85c630;
+	outline:none;
+}
+
+input[type=file]
+{
+	font-family: 'coolvetica_rg';
+	font-size: 18px;
+	width: 500px;
+}
+
+input[type=submit],
+a.submit{
+	background-color:#50b326;
+	border:0px;
+	-moz-border-radius:15px;
+	-webkit-border-radius:15px;
+	color:#fff;
+	cursor:pointer;
+	font-family: 'coolvetica_rg';
+	font-size: 42px;
+	padding: 2px 0px;
+	text-decoration:none;
+	margin-left: 60%;
+}
+input[type=submit]:hover,
+a.submit:hover{
+	text-decoration:none;
+	color:#fffd55;
+}
+input[type=submit]:active,
+input[type=submit]:focus,
+a.submit:active,
+a.submit:focus{
+	background:green;
+	border-color:#093c75;
+	outline:none;
+}
