Signed-off-by: Salman ALAMDAR <salman.alamdar@gmail.com>

--- a/Developpement/design/style.css
+++ b/Developpement/design/style.css
@@ -450,3 +450,11 @@ a.submit:focus{
 {
 	float : right; 
 }
+.comments
+{
+	background-color: #85C630;
+    font-size: 25px;
+    height: 100%;
+    position: relative;
+    width: 64%;
+}
