--- a/Developpement/design/style.css
+++ b/Developpement/design/style.css
@@ -93,7 +93,8 @@ a
 	border-style:solid;
 	background-color: white;
 	font-size: 14px;
-	box-shadow: 5px 5px 3px #417324; 
+	box-shadow: 5px 5px 3px #417324;
+	margin-top: -5px;
 }
 .description_news
 {
@@ -129,6 +130,7 @@ a
 	font-size: 24px;
 	width: 120px;
 	box-shadow: 5px 5px 3px #417324; 
+		vertical-align: top; 
 }
 .block_content
 {
@@ -138,6 +140,7 @@ a
 	border-style:solid;
 	background-color: white;
 	box-shadow: 5px 5px 3px #417324; 
+		vertical-align: top; 
 }
 .pulse_button
 {
@@ -155,6 +158,7 @@ a
 	font-family: 'coolvetica_rg';
 	font-size: 24px;
 	text-align: right;
+		vertical-align: top; 
 }
 .block_content_right
 {
@@ -164,6 +168,7 @@ a
 	border-style:solid;
 	background-color: white;
 	box-shadow: 5px 5px 3px #417324; 
+		vertical-align: top; 
 }
 .pulse_button_right
 {
@@ -278,7 +283,6 @@ a
 	float: left;
 	width: 200px;
 	height: 400px;
-	vertical-align: top; 
 }
 .about_block img
 {
@@ -315,6 +319,7 @@ a
 	font-size: 16px;
 	box-shadow: 5px 5px 3px #417324;
 	vertical-align: top;
+	margin-top: -5px;
 }
 .article_content img
 {
