--- a/Developpement/design/debate.css
+++ b/Developpement/design/debate.css
@@ -1,75 +1,133 @@
-.post_debates
+.presentation
 {
+	background-color: #85C630;
+    color: white;
+    font-family: "coolvetica_rg";
+    font-size: 25px;
+    height: 193px;
+    margin: auto;
+    width: 838px;
+    padding: 1px;
+    text-align: center;
+	box-shadow: 10px 10px 8px #417324;
 	border-radius: 5px 5px 5px 5px;
-	width: 70%;
+}
+input[type="submit"]{
+     background-color: #50B326;
+    border: 0 none;
+    border-radius: 5px 5px 5px 5px;
+    box-shadow: 3px 3px 2px #417324;
+    color: #FFFFFF;
+    cursor: pointer;
+    font-family: 'coolvetica_rg';
+    font-size: 19px;
+    left: 76%;
+    padding: 2px 0;
+    position: absolute;
+    text-decoration: none;
+    width: 199px;
+}
+input[type="submit"]:hover
+{
+    color: #FFFD55;
+    text-decoration: none;
 	margin: auto;
 }
-
-.comment_debates
-{
-	border-radius: 5px 5px 5px 5px;
-	height: 81px;
-    left: 4%;
+#pardessus {
+    background-color: #85C630;
+    border-radius: 5px 5px 5px 5px;
+    box-shadow: 10px 10px 8px #417324;
+    height: 35px;
     position: relative;
-    top:33px;
-    width: 50%;
-
+    top: 14px;
+    width: 838px;
+	margin:auto;
 }
-.date_comments
-{
-	margin-top: -7px;
-	background-color: #85c630;
-	color: white;
-	font-size: 10px;
-	height: 78%;
+#menu {
+    -moz-transition: all 1s ease 0s;
+    background-color: #85C630;
+    border-radius: 5px 5px 5px 5px;
+    box-shadow: 10px 10px 8px #417324;
+    color: white;
+    font-family: "coolvetica_rg";
+    font-size: 30px;
+    height: 40px;
+    margin: auto;
+    padding: 2px;
+    text-align: center;
+    width: 838px;
 }
-
-.title_comment
- {
+dl {
+    -moz-transition: all 1s ease 0s;
+    display: inline-block;
+    float: left;
+    height: 77px;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    z-index: -17;
+}
+dt {
+    -moz-transition: all 1s ease 0s;
     background-color: #85C630;
     color: white;
-    font-family: 'coolvetica_rg';
-    font-size: 28px;
-    width: 100%;
+    cursor: pointer;
+    display: inline-block;
+    line-height: 18px;
+    text-align: center;
+    width: 838px;
+	border-radius: 5px 5px 5px 5px;
+    box-shadow: 10px 10px 8px #417324;
 }
-
-.user_picture
-{
-background-color: white;
-	
-	
-
-	
-	border-color:#85c630;
-	border-width:3px;
-	border-style:solid;
-	width:100%
-	
-	
+dd {
+    -moz-transition: all 1s ease 0s;
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    background-color: #85C630;
 }
-
-.description_comment 
-{
-
-    background-color: white;
-    border-color: #85C630;
-    border-style: solid;
-    border-width: 6px;
-    font-size: 11px;
-	
-
+dd ul {
+    -moz-transition: all 1s ease 0s;
+    list-style: none outside none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
 }
-
-.size
-{
-height:10%;
-width:15%
+dd ul li {
+    -moz-transition: all 1s ease 0s;
+    display: block;
+    margin: 0;
+    padding: 0;
+    text-align: center;
 }
-
-.size_date
-{
-height: 30%;
-width: 3%;
+dd ul li a {
+    border-bottom: 1px dotted white;
+    border-top: 1px dotted white;
+    color: white;
+    display: block;
+    height: 83px;
+    line-height: 40px;
+    text-align: center;
+    text-decoration: none;
+    width: 265px;
 }
-
-
+dd ul li a:hover {
+    -moz-transition: all 1s ease 0s;
+    color: red;
+    text-align: center;
+}
+dl dd {
+    display: none;
+    text-align: center;
+}
+dl:hover dd {
+    -moz-transition: all 1s ease 0s;
+    display: block;
+    text-align: center;
+}
+.lol:hover{
+color:#FFFD55;
+}
+textarea{
+resize:none;}
