--- a/Developpement/design/style.css
+++ b/Developpement/design/style.css
@@ -403,11 +403,13 @@ select:active, select:focus {
 	z-index:0;
 }
 .humor
-{
-	text-shadow: 1px 1px 5px black;
+{ 
+	width: 100%;
+	position: relative;
+	display: block;
 	margin-top: -30px;
 	font-family: 'coolvetica_rg';
 	font-size: 18px;
-	background-color: #85C630;
+	background-color: black;
 	color: white;
 }
