--- a/Developpement/design/style.css
+++ b/Developpement/design/style.css
@@ -23,21 +23,46 @@ a {
     font-size: 12px;
     height: 75px;
     text-align: right;
-    width: 600px;
+    width: 1024px;
 }
 .header_menu {
     font-family: 'coolvetica_rg';
     font-size: 22px;
+	width: 100%;
+	height: 25px;
 }
 .header_menu a {
-    -webkit-transition: all 0.2s ease-in;
-	-moz-transition: all 0.2s ease-in;
-	transition: all 0.2s ease-in;
-    color: white;
-}
+   border: 1px solid #003e40;
+   background: #62a708;
+   background: -webkit-gradient(linear, left top, left bottom, from(#85c630), to(#62a708));
+   background: -webkit-linear-gradient(top, #85c630, #62a708);
+   background: -moz-linear-gradient(top, #85c630, #62a708);
+   background: -ms-linear-gradient(top, #85c630, #62a708);
+   background: -o-linear-gradient(top, #85c630, #62a708);
+   padding: 4px 8px;
+   -webkit-border-radius: 6px;
+   -moz-border-radius: 6px;
+   border-radius: 6px;
+   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+   text-shadow: rgba(0,0,0,.4) 0 1px 0;
+   color: white;
+   font-size: 20px;
+   font-family: 'coolvetica_rg';
+   text-decoration: none;
+   vertical-align: middle;
+   box-shadow: 2px 2px 2px #003e40;
+   }
 .header_menu a:hover {
-    text-shadow: 1px 0 10px black;
-}
+   border-top-color: #00ad23;
+   background: #00ad23;
+   color: #f5ff63;
+   }
+.header_menu a:active {
+   border-top-color: #1b435e;
+   background: #1b435e;
+   }
 .news_sort {
     background-color: #85C630;
     box-shadow: 10px 10px 8px #003e40;
@@ -57,7 +82,12 @@ a {
     width: 90%;
 }
 .title_post {
-    background-color: #85C630;
+   background: #62a708;
+   background: -webkit-gradient(linear, left top, left bottom, from(#85c630), to(#62a708));
+   background: -webkit-linear-gradient(top, #85c630, #62a708);
+   background: -moz-linear-gradient(top, #85c630, #62a708);
+   background: -ms-linear-gradient(top, #85c630, #62a708);
+   background: -o-linear-gradient(top, #85c630, #62a708);
     color: white;
     font-family: 'coolvetica_rg';
     font-size: 20px;
@@ -351,12 +381,36 @@ select:active, select:focus {
     width: 300px;
 }
 .news_link {
-    background-color: #50B326;
-    color: white;
-    font-family: 'coolvetica_rg';
-    font-size: 28px;
-    font-weight: bold;
-}
+   border-top: 1px solid #003e40;
+   background: #62a708;
+   background: -webkit-gradient(linear, left top, left bottom, from(#85c630), to(#62a708));
+   background: -webkit-linear-gradient(top, #85c630, #62a708);
+   background: -moz-linear-gradient(top, #85c630, #62a708);
+   background: -ms-linear-gradient(top, #85c630, #62a708);
+   background: -o-linear-gradient(top, #85c630, #62a708);
+   padding: 3px 6px;
+   -webkit-border-radius: 4px;
+   -moz-border-radius: 4px;
+   border-radius: 4px;
+   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+   text-shadow: rgba(0,0,0,.4) 0 1px 0;
+   color: white;
+   font-size: 23px;
+   font-family: 'coolvetica_rg';
+   text-decoration: none;
+   vertical-align: middle;
+   }
+.news_link:hover {
+   border-top-color: #00ad23;
+   background: #00ad23;
+   color: #f5ff63;
+   }
+.news_link:active {
+   border-top-color: #1b435e;
+   background: #1b435e;
+   }
 .depulse input[type="submit"], a.submit, .propulse input[type="submit"], a.submit, .debate input[type="submit"], a.submit, input[type="submit"]{
     background-color: #50B326;
     border: 0 none;
