--- a/Developpement/design/style.css
+++ b/Developpement/design/style.css
@@ -9,6 +9,49 @@ body {
 a {
     text-decoration: none;
 }
+#note {
+	position: absolute;
+	z-index: 6001;
+	top: 0;
+	left: 0;
+	right: 0;
+	background: #fde073;
+	text-align: center;
+	line-height: 2.5;
+	overflow: hidden; 
+	-webkit-box-shadow: 0 0 5px black;
+	-moz-box-shadow:    0 0 5px black;
+	box-shadow:         0 0 5px black;
+}
+.cssanimations.csstransforms #note {
+	-webkit-transform: translateY(-50px);
+	-webkit-animation: slideDown 2.5s 1.0s 1 ease forwards;
+	-moz-transform:    translateY(-50px);
+	-moz-animation:    slideDown 2.5s 1.0s 1 ease forwards;
+}
+
+#close {
+  position: absolute;
+  right: 10px;
+  top: 9px;
+  text-indent: -9999px;
+  background: url(design/img/close.png);
+  height: 16px;
+  width: 16px;
+  cursor: pointer;
+}
+.cssanimations.csstransforms #close {
+  display: none;
+}
+
+@-webkit-keyframes slideDown {
+	0%, 100% { -webkit-transform: translateY(-50px); }
+	10%, 90% { -webkit-transform: translateY(0px); }
+}
+@-moz-keyframes slideDown {
+	0%, 100% { -moz-transform: translateY(-50px); }
+	10%, 90% { -moz-transform: translateY(0px); }
+}
 .header {
     background-color: #85C630;
     box-shadow: 10px 10px 8px #003e40;
@@ -388,9 +431,7 @@ select:active, select:focus {
    background: -moz-linear-gradient(top, #85c630, #62a708);
    background: -ms-linear-gradient(top, #85c630, #62a708);
    background: -o-linear-gradient(top, #85c630, #62a708);
-   padding: 3px 6px;
-   -webkit-border-radius: 4px;
-   -moz-border-radius: 4px;
+
    border-radius: 4px;
    -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
    -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
@@ -521,4 +562,69 @@ select:active, select:focus {
 	font-family:coolvetica_rg;
 	font-size : 39px;
 }
+#background {
+	background: url(design/img/background.png) repeat 5% 5%;
+	position: absolute;
+	top: 0; left: 0; right: 0; bottom: 0;
+	z-index: 100;
+}
 
+#midground {
+	background: url(design/img/midground.png) repeat 20% 20%;
+	position: absolute;
+	top: 0; left: 0; right: 0; bottom: 0;
+	z-index: 100;
+}
+
+#foreground {
+	background: url(design/img/foreground.png) repeat 90% 110%;
+	position: absolute;
+	top: 0; left: 0; right: 0; bottom: 0;
+	z-index: 200;
+}
+#photos {
+   /* Prevent vertical gaps */
+   line-height: 0;
+
+   -webkit-column-count: 5;
+   -webkit-column-gap:   0px;
+   -moz-column-count:    5;
+   -moz-column-gap:      0px;
+   column-count:         5;
+   column-gap:           0px;
+
+}
+#photos img {
+  /* Just in case there are inline attributes */
+  width: 100% !important;
+  height: auto !important;
+}
+
+@media (max-width: 1200px) {
+  #photos {
+  -moz-column-count:    4;
+  -webkit-column-count: 4;
+  column-count:         4;
+  }
+}
+@media (max-width: 1000px) {
+  #photos {
+  -moz-column-count:    3;
+  -webkit-column-count: 3;
+  column-count:         3;
+  }
+}
+@media (max-width: 800px) {
+  #photos {
+  -moz-column-count:    2;
+  -webkit-column-count: 2;
+  column-count:         2;
+  }
+}
+@media (max-width: 400px) {
+  #photos {
+  -moz-column-count:    1;
+  -webkit-column-count: 1;
+  column-count:         1;
+  }
+}
